website/versioned_docs/version-0.5.0/security/fundamentals/profiles.md
---
title: Production Posture
hide_title: true
pageType: concept
journey: security
description: What Development and Hardened mean as security contracts, and why Hardened is the supported production posture for OpenBao Operator.
---

<PageHeader
  title="Security profile contracts"
  lede="What `Development` and `Hardened` optimize for, what Hardened requires in production, and how the profiles change the operating contract."
/>



<DecisionTable
  title="Profile intent"
  columns={['Profile', 'Optimized for', 'What it trades off']}
  rows={[
    {
      cells: [
        'Hardened',
        'Production deployments with explicit external trust roots and stricter lifecycle guarantees.',
        'More up-front requirements, less tolerance for weak bootstrap and trust shortcuts.',
      ],
      emphasis: 'recommended',
    },
    {
      cells: [
        'Development',
        'Local testing, CI, and quick evaluation when long-term trust posture is not the goal.',
        'Allows bootstrap and unseal material to exist in cluster Secrets and relaxes some runtime guarantees.',
      ],
    },
  ]}
/>

<DecisionTable
  kind="reference"
  title="Profile comparison"
  columns={['Feature', 'Hardened', 'Development']}
  rows={[
    {
      cells: [
        'Root token handling',
        'Auto-revoked; not stored in a Secret as part of the supported production path.',
        'Can be stored in a Secret when self-init is disabled.',
      ],
      emphasis: 'recommended',
    },
    {
      cells: [
        'Unseal root of trust',
        'Requires a non-static external trust source such as transit, cloud KMS, or HSM-backed modes.',
        'Defaults can rely on a static key in a Kubernetes Secret.',
      ],
    },
    {
      cells: [
        'TLS posture',
        'Requires `External` or `ACME` style trust; `OperatorManaged` TLS is not the production path.',
        'Allows operator-managed TLS for local or test usage.',
      ],
    },
    {
      cells: [
        'Bootstrap model',
        'Self-init is the supported production path.',
        'Manual bootstrap or self-init are both possible.',
      ],
    },
    {
      cells: [
        'Supply-chain guardrails',
        'Image verification protections remain on and cannot degrade to warning-only behavior.',
        'Verification can be relaxed for testing.',
      ],
    },
    {
      cells: [
        'Unsafe escape hatches',
        'Rejects TLS disablement, TLS skip-verify, backend HTTP, raw ingress rules, broad egress, ambient backup credentials, and dangerous runtime flags.',
        'Allows compatibility and debugging paths when the caller is otherwise authorized.',
      ],
    },
  ]}
/>

## Hardened production contract

<DecisionTable
  kind="reference"
  title="Hardened production requirements"
  columns={['Requirement', 'Why it exists', 'Operational effect']}
  rows={[
    {
      cells: [
        'At least three replicas',
        'Raft needs quorum and safe disruption handling in production.',
        'Single-node clusters are not treated as production-safe.',
      ],
      emphasis: 'recommended',
    },
    {
      cells: [
        'External trust root for unseal',
        'The cluster should not keep its root of trust only in Kubernetes etcd.',
        'Cloud KMS, transit, KMIP, or PKCS#11-style paths become part of the deployment contract.',
      ],
    },
    {
      cells: [
        'Trusted TLS path',
        'The workload identity boundary should be anchored in a production-grade certificate model.',
        '`OperatorManaged` TLS is rejected for Hardened clusters.',
      ],
    },
    {
      cells: [
        'Self-init enabled',
        'The supported bootstrap path should avoid persisting the initial root token.',
        'Human bootstrap becomes declarative instead of secret-based.',
      ],
    },
    {
      cells: [
        'Verification guardrails stay enforced',
        'Production image trust should not be optional.',
        'Managed workloads keep digest and verification enforcement even when omitted from config.',
      ],
    },
    {
      cells: [
        'No implicit unsafe exceptions',
        'Production posture must be enforced at admission and in status, not documented as warning-only behavior.',
        'Use verified TLS, explicit ingress peers, port-scoped egress, explicit backup storage identity, and supported runtime defaults.',
      ],
    },
  ]}
/>

<Callout type="success" title="Hardened profile assumptions">

Hardened means the operator can rely on an external trust root, explicit runtime identity, and a production-ready lifecycle posture. It defines the operating model for the cluster, not just one field in the CR.

</Callout>

## Development profile relaxations

Development intentionally relaxes the production contract:

- bootstrap material can persist in cluster Secrets
- static unseal remains available
- operator-managed TLS can be used
- runtime and supply-chain controls can be less strict
- the cluster reports a security-risk signal rather than pretending this posture is production-ready

<Callout type="warning" title="Trust-root migrations">

Teams often start in Development for exploration. For staging or production, create a new Hardened cluster instead of promoting a Development trust path in place.

</Callout>

## Configuration scope

Configuration steps for `spec.profile`, unseal mode, and the production requirements are in <SiteLink docId="user-guide/openbaocluster/configuration/security-profiles">Configure Security Profiles</SiteLink>.

<NextActions
  title="Continue the security model"
  items={[
    {
      label: 'Configure security profiles',
      description: 'Cluster fields and configuration steps behind these profile requirements.',
      docId: 'user-guide/openbaocluster/configuration/security-profiles',
    },
    {
      label: 'Secrets and trust material',
      description: 'Review how root tokens, unseal keys, and job identities differ between these profiles.',
      docId: 'security/fundamentals/secrets-management',
    },
    {
      label: 'Threat model',
      description: 'Rationale behind these profile boundaries.',
      docId: 'security/fundamentals/threat-model',
    },
  ]}
/>
